project-parser/ocaml/Parser.automaton
State 0:
program' -> . program [ # ]
-- On T_Protocol shift to state 1
-- On protodecs shift to state 71
-- On protodec shift to state 297
-- On program shift to state 299
-- On T_While reduce production protodecs -> 
-- On T_True reduce production protodecs -> 
-- On T_Sub reduce production protodecs -> 
-- On T_String reduce production protodecs -> 
-- On T_Semicolon reduce production protodecs -> 
-- On T_Return reduce production protodecs -> 
-- On T_Printstring reduce production protodecs -> 
-- On T_Printline reduce production protodecs -> 
-- On T_Printint reduce production protodecs -> 
-- On T_Printfloat reduce production protodecs -> 
-- On T_Printchar reduce production protodecs -> 
-- On T_Printbool reduce production protodecs -> 
-- On T_Null reduce production protodecs -> 
-- On T_Not reduce production protodecs -> 
-- On T_New reduce production protodecs -> 
-- On T_Lambda reduce production protodecs -> 
-- On T_LParen reduce production protodecs -> 
-- On T_LCur_Bracket reduce production protodecs -> 
-- On T_If reduce production protodecs -> 
-- On T_Id reduce production protodecs -> 
-- On T_Halt reduce production protodecs -> 
-- On T_For reduce production protodecs -> 
-- On T_Float_Const reduce production protodecs -> 
-- On T_False reduce production protodecs -> 
-- On T_Const reduce production protodecs -> 
-- On T_Class reduce production protodecs -> 
-- On T_Char reduce production protodecs -> 

State 1:
protodec -> T_Protocol . id typevars extends T_LCur_Bracket funprotos T_RCur_Bracket [ T_While T_True T_Sub T_String T_Semicolon T_Return T_Protocol T_Printstring T_Printline T_Printint T_Printfloat T_Printchar T_Printbool T_Null T_Not T_New T_Lambda T_LParen T_LCur_Bracket T_If T_Id T_Halt T_For T_Float_Const T_False T_Const T_Class T_Char ]
-- On T_Id shift to state 2
-- On id shift to state 3

State 2:
id -> T_Id . [ T_Sub T_Set T_Semicolon T_RSq_Bracket T_RParen T_Or T_Neq T_Mult T_Leq T_Le T_LSq_Bracket T_LParen T_LCur_Bracket T_Implements T_Id T_Geq T_Ge T_Extends T_Eq T_Dot T_Div T_Comma T_And T_Add ]
-- On T_Sub reduce production id -> T_Id 
-- On T_Set reduce production id -> T_Id 
-- On T_Semicolon reduce production id -> T_Id 
-- On T_RSq_Bracket reduce production id -> T_Id 
-- On T_RParen reduce production id -> T_Id 
-- On T_Or reduce production id -> T_Id 
-- On T_Neq reduce production id -> T_Id 
-- On T_Mult reduce production id -> T_Id 
-- On T_Leq reduce production id -> T_Id 
-- On T_Le reduce production id -> T_Id 
-- On T_LSq_Bracket reduce production id -> T_Id 
-- On T_LParen reduce production id -> T_Id 
-- On T_LCur_Bracket reduce production id -> T_Id 
-- On T_Implements reduce production id -> T_Id 
-- On T_Id reduce production id -> T_Id 
-- On T_Geq reduce production id -> T_Id 
-- On T_Ge reduce production id -> T_Id 
-- On T_Extends reduce production id -> T_Id 
-- On T_Eq reduce production id -> T_Id 
-- On T_Dot reduce production id -> T_Id 
-- On T_Div reduce production id -> T_Id 
-- On T_Comma reduce production id -> T_Id 
-- On T_And reduce production id -> T_Id 
-- On T_Add reduce production id -> T_Id 

State 3:
protodec -> T_Protocol id . typevars extends T_LCur_Bracket funprotos T_RCur_Bracket [ T_While T_True T_Sub T_String T_Semicolon T_Return T_Protocol T_Printstring T_Printline T_Printint T_Printfloat T_Printchar T_Printbool T_Null T_Not T_New T_Lambda T_LParen T_LCur_Bracket T_If T_Id T_Halt T_For T_Float_Const T_False T_Const T_Class T_Char ]
-- On T_Le shift to state 4
-- On typevars shift to state 11
-- On T_LCur_Bracket reduce production typevars -> 
-- On T_Extends reduce production typevars -> 

State 4:
typevars -> T_Le . tvars T_Ge [ T_LParen T_LCur_Bracket T_Implements T_Extends ]
-- On T_Var shift to state 5
-- On tvars shift to state 6
-- On tvar shift to state 8

State 5:
tvar -> T_Var . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production tvar -> T_Var 
-- On T_RParen reduce production tvar -> T_Var 
-- On T_LSq_Bracket reduce production tvar -> T_Var 
-- On T_LCur_Bracket reduce production tvar -> T_Var 
-- On T_Id reduce production tvar -> T_Var 
-- On T_Ge reduce production tvar -> T_Var 
-- On T_Comma reduce production tvar -> T_Var 

State 6:
typevars -> T_Le tvars . T_Ge [ T_LParen T_LCur_Bracket T_Implements T_Extends ]
-- On T_Ge shift to state 7

State 7:
typevars -> T_Le tvars T_Ge . [ T_LParen T_LCur_Bracket T_Implements T_Extends ]
-- On T_LParen reduce production typevars -> T_Le tvars T_Ge 
-- On T_LCur_Bracket reduce production typevars -> T_Le tvars T_Ge 
-- On T_Implements reduce production typevars -> T_Le tvars T_Ge 
-- On T_Extends reduce production typevars -> T_Le tvars T_Ge 

State 8:
tvars -> tvar . [ T_Ge ]
tvars -> tvar . T_Comma tvars [ T_Ge ]
-- On T_Comma shift to state 9
-- On T_Ge reduce production tvars -> tvar 

State 9:
tvars -> tvar T_Comma . tvars [ T_Ge ]
-- On T_Var shift to state 5
-- On tvars shift to state 10
-- On tvar shift to state 8

State 10:
tvars -> tvar T_Comma tvars . [ T_Ge ]
-- On T_Ge reduce production tvars -> tvar T_Comma tvars 

State 11:
protodec -> T_Protocol id typevars . extends T_LCur_Bracket funprotos T_RCur_Bracket [ T_While T_True T_Sub T_String T_Semicolon T_Return T_Protocol T_Printstring T_Printline T_Printint T_Printfloat T_Printchar T_Printbool T_Null T_Not T_New T_Lambda T_LParen T_LCur_Bracket T_If T_Id T_Halt T_For T_Float_Const T_False T_Const T_Class T_Char ]
-- On T_Extends shift to state 12
-- On extends shift to state 48
-- On T_LCur_Bracket reduce production extends -> 

State 12:
extends -> T_Extends . typeapps [ T_LCur_Bracket ]
-- On T_Var shift to state 5
-- On T_Id shift to state 2
-- On typeapps shift to state 13
-- On typeapp shift to state 14
-- On tvar shift to state 18
-- On id shift to state 19
-- On T_LCur_Bracket reduce production typeapps -> 

State 13:
extends -> T_Extends typeapps . [ T_LCur_Bracket ]
-- On T_LCur_Bracket reduce production extends -> T_Extends typeapps 

State 14:
typeapps -> typeapp . typeapps_rest [ T_LCur_Bracket ]
-- On T_Comma shift to state 15
-- On typeapps_rest shift to state 47
-- On T_LCur_Bracket reduce production typeapps_rest -> 

State 15:
typeapps_rest -> T_Comma . typeapp typeapps_rest [ T_LCur_Bracket ]
-- On T_Var shift to state 5
-- On T_Id shift to state 2
-- On typeapp shift to state 16
-- On tvar shift to state 18
-- On id shift to state 19

State 16:
typeapps_rest -> T_Comma typeapp . typeapps_rest [ T_LCur_Bracket ]
-- On T_Comma shift to state 15
-- On typeapps_rest shift to state 17
-- On T_LCur_Bracket reduce production typeapps_rest -> 

State 17:
typeapps_rest -> T_Comma typeapp typeapps_rest . [ T_LCur_Bracket ]
-- On T_LCur_Bracket reduce production typeapps_rest -> T_Comma typeapp typeapps_rest 

State 18:
typeapp -> tvar . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production typeapp -> tvar 
-- On T_RParen reduce production typeapp -> tvar 
-- On T_LSq_Bracket reduce production typeapp -> tvar 
-- On T_LCur_Bracket reduce production typeapp -> tvar 
-- On T_Id reduce production typeapp -> tvar 
-- On T_Ge reduce production typeapp -> tvar 
-- On T_Comma reduce production typeapp -> tvar 

State 19:
typeapp -> id . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
typeapp -> id . T_Le types T_Ge [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Le shift to state 20
-- On T_Semicolon reduce production typeapp -> id 
-- On T_RParen reduce production typeapp -> id 
-- On T_LSq_Bracket reduce production typeapp -> id 
-- On T_LCur_Bracket reduce production typeapp -> id 
-- On T_Id reduce production typeapp -> id 
-- On T_Ge reduce production typeapp -> id 
-- On T_Comma reduce production typeapp -> id 

State 20:
typeapp -> id T_Le . types T_Ge [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Var shift to state 5
-- On T_PTString shift to state 21
-- On T_PTChar shift to state 22
-- On T_Int shift to state 23
-- On T_Id shift to state 2
-- On T_Function shift to state 24
-- On T_Float shift to state 27
-- On T_Bool shift to state 28
-- On types shift to state 45
-- On typeapp shift to state 33
-- On tvar shift to state 18
-- On ttype shift to state 40
-- On primtype shift to state 39
-- On id shift to state 19
-- On T_Ge reduce production types -> 

State 21:
primtype -> T_PTString . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production primtype -> T_PTString 
-- On T_RParen reduce production primtype -> T_PTString 
-- On T_LSq_Bracket reduce production primtype -> T_PTString 
-- On T_LCur_Bracket reduce production primtype -> T_PTString 
-- On T_Id reduce production primtype -> T_PTString 
-- On T_Ge reduce production primtype -> T_PTString 
-- On T_Comma reduce production primtype -> T_PTString 

State 22:
primtype -> T_PTChar . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production primtype -> T_PTChar 
-- On T_RParen reduce production primtype -> T_PTChar 
-- On T_LSq_Bracket reduce production primtype -> T_PTChar 
-- On T_LCur_Bracket reduce production primtype -> T_PTChar 
-- On T_Id reduce production primtype -> T_PTChar 
-- On T_Ge reduce production primtype -> T_PTChar 
-- On T_Comma reduce production primtype -> T_PTChar 

State 23:
primtype -> T_Int . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production primtype -> T_Int 
-- On T_RParen reduce production primtype -> T_Int 
-- On T_LSq_Bracket reduce production primtype -> T_Int 
-- On T_LCur_Bracket reduce production primtype -> T_Int 
-- On T_Id reduce production primtype -> T_Int 
-- On T_Ge reduce production primtype -> T_Int 
-- On T_Comma reduce production primtype -> T_Int 

State 24:
ttype -> T_Function . T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_LParen shift to state 25

State 25:
ttype -> T_Function T_LParen . T_LParen types T_RParen T_Arrow rtype T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_LParen shift to state 26

State 26:
ttype -> T_Function T_LParen T_LParen . types T_RParen T_Arrow rtype T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Var shift to state 5
-- On T_PTString shift to state 21
-- On T_PTChar shift to state 22
-- On T_Int shift to state 23
-- On T_Id shift to state 2
-- On T_Function shift to state 24
-- On T_Float shift to state 27
-- On T_Bool shift to state 28
-- On types shift to state 29
-- On typeapp shift to state 33
-- On tvar shift to state 18
-- On ttype shift to state 40
-- On primtype shift to state 39
-- On id shift to state 19
-- On T_RParen reduce production types -> 

State 27:
primtype -> T_Float . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production primtype -> T_Float 
-- On T_RParen reduce production primtype -> T_Float 
-- On T_LSq_Bracket reduce production primtype -> T_Float 
-- On T_LCur_Bracket reduce production primtype -> T_Float 
-- On T_Id reduce production primtype -> T_Float 
-- On T_Ge reduce production primtype -> T_Float 
-- On T_Comma reduce production primtype -> T_Float 

State 28:
primtype -> T_Bool . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production primtype -> T_Bool 
-- On T_RParen reduce production primtype -> T_Bool 
-- On T_LSq_Bracket reduce production primtype -> T_Bool 
-- On T_LCur_Bracket reduce production primtype -> T_Bool 
-- On T_Id reduce production primtype -> T_Bool 
-- On T_Ge reduce production primtype -> T_Bool 
-- On T_Comma reduce production primtype -> T_Bool 

State 29:
ttype -> T_Function T_LParen T_LParen types . T_RParen T_Arrow rtype T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_RParen shift to state 30

State 30:
ttype -> T_Function T_LParen T_LParen types T_RParen . T_Arrow rtype T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Arrow shift to state 31

State 31:
ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow . rtype T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Void shift to state 32
-- On T_Var shift to state 5
-- On T_PTString shift to state 21
-- On T_PTChar shift to state 22
-- On T_Int shift to state 23
-- On T_Id shift to state 2
-- On T_Function shift to state 24
-- On T_Float shift to state 27
-- On T_Bool shift to state 28
-- On typeapp shift to state 33
-- On tvar shift to state 18
-- On ttype shift to state 34
-- On rtype shift to state 37
-- On primtype shift to state 39
-- On id shift to state 19

State 32:
rtype -> T_Void . [ T_Semicolon T_RParen T_LCur_Bracket ]
-- On T_Semicolon reduce production rtype -> T_Void 
-- On T_RParen reduce production rtype -> T_Void 
-- On T_LCur_Bracket reduce production rtype -> T_Void 

State 33:
ttype -> typeapp . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production ttype -> typeapp 
-- On T_RParen reduce production ttype -> typeapp 
-- On T_LSq_Bracket reduce production ttype -> typeapp 
-- On T_LCur_Bracket reduce production ttype -> typeapp 
-- On T_Id reduce production ttype -> typeapp 
-- On T_Ge reduce production ttype -> typeapp 
-- On T_Comma reduce production ttype -> typeapp 

State 34:
rtype -> ttype . [ T_Semicolon T_RParen T_LCur_Bracket ]
ttype -> ttype . T_LSq_Bracket T_RSq_Bracket [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket ]
-- On T_LSq_Bracket shift to state 35
-- On T_Semicolon reduce production rtype -> ttype 
-- On T_RParen reduce production rtype -> ttype 
-- On T_LCur_Bracket reduce production rtype -> ttype 

State 35:
ttype -> ttype T_LSq_Bracket . T_RSq_Bracket [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_RSq_Bracket shift to state 36

State 36:
ttype -> ttype T_LSq_Bracket T_RSq_Bracket . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 
-- On T_RParen reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 
-- On T_LSq_Bracket reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 
-- On T_LCur_Bracket reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 
-- On T_Id reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 
-- On T_Ge reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 
-- On T_Comma reduce production ttype -> ttype T_LSq_Bracket T_RSq_Bracket 

State 37:
ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype . T_RParen [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_RParen shift to state 38

State 38:
ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 
-- On T_RParen reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 
-- On T_LSq_Bracket reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 
-- On T_LCur_Bracket reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 
-- On T_Id reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 
-- On T_Ge reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 
-- On T_Comma reduce production ttype -> T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen 

State 39:
ttype -> primtype . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production ttype -> primtype 
-- On T_RParen reduce production ttype -> primtype 
-- On T_LSq_Bracket reduce production ttype -> primtype 
-- On T_LCur_Bracket reduce production ttype -> primtype 
-- On T_Id reduce production ttype -> primtype 
-- On T_Ge reduce production ttype -> primtype 
-- On T_Comma reduce production ttype -> primtype 

State 40:
ttype -> ttype . T_LSq_Bracket T_RSq_Bracket [ T_RParen T_LSq_Bracket T_Ge T_Comma ]
types -> ttype . types_rest [ T_RParen T_Ge ]
-- On T_LSq_Bracket shift to state 35
-- On T_Comma shift to state 41
-- On types_rest shift to state 44
-- On T_RParen reduce production types_rest -> 
-- On T_Ge reduce production types_rest -> 

State 41:
types_rest -> T_Comma . ttype types_rest [ T_RParen T_Ge ]
-- On T_Var shift to state 5
-- On T_PTString shift to state 21
-- On T_PTChar shift to state 22
-- On T_Int shift to state 23
-- On T_Id shift to state 2
-- On T_Function shift to state 24
-- On T_Float shift to state 27
-- On T_Bool shift to state 28
-- On typeapp shift to state 33
-- On tvar shift to state 18
-- On ttype shift to state 42
-- On primtype shift to state 39
-- On id shift to state 19

State 42:
ttype -> ttype . T_LSq_Bracket T_RSq_Bracket [ T_RParen T_LSq_Bracket T_Ge T_Comma ]
types_rest -> T_Comma ttype . types_rest [ T_RParen T_Ge ]
-- On T_LSq_Bracket shift to state 35
-- On T_Comma shift to state 41
-- On types_rest shift to state 43
-- On T_RParen reduce production types_rest -> 
-- On T_Ge reduce production types_rest -> 

State 43:
types_rest -> T_Comma ttype types_rest . [ T_RParen T_Ge ]
-- On T_RParen reduce production types_rest -> T_Comma ttype types_rest 
-- On T_Ge reduce production types_rest -> T_Comma ttype types_rest 

State 44:
types -> ttype types_rest . [ T_RParen T_Ge ]
-- On T_RParen reduce production types -> ttype types_rest 
-- On T_Ge reduce production types -> ttype types_rest 

State 45:
typeapp -> id T_Le types . T_Ge [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Ge shift to state 46

State 46:
typeapp -> id T_Le types T_Ge . [ T_Semicolon T_RParen T_LSq_Bracket T_LCur_Bracket T_Id T_Ge T_Comma ]
-- On T_Semicolon reduce production typeapp -> id T_Le types T_Ge 
-- On T_RParen reduce production typeapp -> id T_Le types T_Ge 
-- On T_LSq_Bracket reduce production typeapp -> id T_Le types T_Ge 
-- On T_LCur_Bracket reduce production typeapp -> id T_Le types T_Ge 
-- On T_Id reduce production typeapp -> id T_Le types T_Ge 
-- On T_Ge reduce production typeapp -> id T_Le types T_Ge 
-- On T_Comma reduce production typeapp -> id T_Le types T_Ge 

State 47:
typeapps -> typeapp typeapps_rest . [ T_LCur_Bracket ]
-- On T_LCur_Bracket reduce production typeapps -> typeapp typeapps_rest 

State 48:
protodec -> T_Protocol id typevars extends . T_LCur_Bracket funprotos T_RCur_Bracket [ T_While T_True T_Sub T_String T_Semicolon T_Return T_Protocol T_Printstring T_Printline T_Printint T_Printfloat T_Printchar T_Printbool T_Null T_Not T_New T_Lambda T_LParen T_LCur_Bracket T_If T_Id T_Halt T_For T_Float_Const T_False T_Const T_Class T_Char ]
-- On T_LCur_Bracket shift to state 49

State 49:
protodec -> T_Protocol id typevars extends T_LCur_Bracket . funprotos T_RCur_Bracket [ T_While T_True T_Sub T_String T_Semicolon T_Return T_Protocol T_Printstring T_Printline T_Printint T_Printfloat T_Printchar T_Printbool T_Null T_Not T_New T_Lambda T_LParen T_LCur_Bracket T_If T_Id T_Halt T_For T_Float_Const T_False T_Const T_Class T_Char ]
-- On T_Fun shift to state 50
-- On funprotos shift to state 67
-- On funproto shift to state 69
-- On T_RCur_Bracket reduce production funprotos -> 

State 50:
funproto -> T_Fun . id typevars T_LParen formals T_RParen T_Semicolon [ T_RCur_Bracket T_Fun ]
funproto -> T_Fun . id typevars T_LParen formals T_RParen T_Colon rtype T_Semicolon [ T_RCur_Bracket T_Fun ]
-- On T_Id shift to state 2
-- On id shift to state 51

State 51:
funproto -> T_Fun id . typevars T_LParen formals T_RParen T_Semicolon [ T_RCur_Bracket T_Fun ]
funproto -> T_Fun id . typevars T_LParen formals T_RParen T_Colon rtype T_Semicolon [ T_RCur_Bracket T_Fun ]
-- On T_Le shift to state 4
-- On typevars shift to state 52
-- On T_LParen reduce production typevars -> 

State 52:
funproto -> T_Fun id typevars . T_LParen formals T_RParen T_Semicolon [ T_RCur_Bracket T_Fun ]
funproto -> T_Fun id typevars . T_LParen formals T_RParen T_Colon rtype T_Semicolon [ T_RCur_Bracket T_Fun ]
-- On T_LParen shift to state 53
